# dms-project

./: .gitignore  eslint.config.mjs  package-lock.json  package.json
.next/: trace
app/: page.tsx
app/posts/: page.tsx
app/posts/[id]/: page.tsx
app/posts/new/: page.tsx
backend/: .env.example  pyproject.toml
lib/: prisma.ts
prisma/: schema.prisma  seed.ts
prisma/migrations/20250629165435_initial_migration/: migration.sql
src/: middleware.ts
src/app/: _app.tsx  layout.tsx  page.tsx
src/app/acquisitions/: page.tsx
src/app/acquisitions/[id]/: page.tsx
src/app/api/acquisitions/: route.ts
src/app/api/acquisitions/[id]/: route.ts
src/app/api/auth/[...nextauth]/: route.ts
src/app/api/cars/: route.ts
src/app/api/cars/[id]/: route.ts
src/app/api/clients/: route.ts
src/app/api/clients/[id]/: route.ts
src/app/api/leads/: route.ts
src/app/api/leads/[id]/: route.ts
src/app/api/proposals/: route.ts
src/app/api/proposals/[id]/: route.ts
src/app/auth/signin/: page.tsx
src/app/cars/: page.tsx
src/app/cars/[id]/: page.tsx
src/app/cars/new/: page.tsx
src/app/clients/: page.tsx
src/app/clients/[id]/: page.tsx
src/app/clients/new/: page.tsx
src/app/leads/: page.tsx
src/app/leads/[id]/: page.tsx
src/app/leads/new/: page.tsx
src/app/proposals/: page.tsx
src/app/proposals/[id]/: page.tsx
src/app/proposals/new/: page.tsx
src/components/: Layout.tsx
